Registration Filters no longer cut off when no results appear

--- a/src/components/FeatureViews/Registration/registration.scss
+++ b/src/components/FeatureViews/Registration/registration.scss
@@ -277,12 +277,6 @@
   padding: 2%;
   margin-top: 4%;
 
-  .fields-wrapper {
-    //-webkit-animation: 1s ease 1 fade-in;
-    //-o-animation: 1s ease 1 fade-in;
-    //animation: 1s ease 1 fade-in;
-  }
-
   .heading {
     margin-top: 50px;
     margin-left: 2%;
@@ -480,6 +474,7 @@
 
 // Registration Landing
 .RegistrationLanding {
+  min-height: 75vh;
   padding: 2%;
 
   .catalog-setting-wrapper{
@@ -515,7 +510,7 @@
 
       .course-detail {
         color: $secondaryFontColor;
-        font-size: 12px;
+        font-size: 14px;
         margin: 3px;
 
         .heading-det {
@@ -539,14 +534,6 @@
         }
       }
     }
-  }
-}
-
-.registration-filter {
-  .filter-options {
-    margin: 10px;
-    width: 300px;
-    text-align: left;
   }
 }
 
